# study_rust_xmls2jsonarr

./: Cargo.toml  README.md  _test.sh
src/: lib.rs  main.rs
tests/: cli.rs  input1.xml  input2.xml
