[package]
name = "xmls2jsonarr"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
xmltojson = "0" # https://dev.to/rtyler/converting-xml-to-json-in-rust-1mnp
serde_json = "1.0" # https://github.com/serde-rs/json

[dev-dependencies]
assert_cmd = "2"

